package com.example.terminal.Model;

public interface Command {
    void execute();
    String getResult();
}

