package com.example.terminal.Model;

public class CommandInvoker {
    public void execute(Command command) {
        command.execute();
    }
}

